Fix several small bugs
- Hide message read info in context menu for bot chats
- Fix broken asset URLs in SCSS (url(assets/...) resolved relative to
  the CSS file, e.g. /partials/assets/... instead of /assets/...);
  this also fixes the monoforum avatar mask, media editor assets and
  chat thread separator backgrounds
- Fix birthday display for dates where the day does not exist in the
  current month (e.g. Oct 31 while today is April): the previous
  setDate/setMonth/setFullYear sequence overflowed the day; use the
  Date constructor directly

--- a/src/components/chat/bubbleParts/chatThreadSeparator.module.scss
+++ b/src/components/chat/bubbleParts/chatThreadSeparator.module.scss
@@ -73,10 +73,10 @@ $round-border-radius: 100px;
   height: 2px;
 
   opacity: 0.075;
-  background-image: url(assets/img/chat-thread-separator-dash-black.svg);
+  background-image: url('/assets/img/chat-thread-separator-dash-black.svg');
   :global(.night) & {
     opacity: 0.15;
-    background-image: url(assets/img/chat-thread-separator-dash.svg);
+    background-image: url('/assets/img/chat-thread-separator-dash.svg');
   }
 
   &Left {
